--- a/public/map.html
+++ b/public/map.html
@@ -32,5 +32,8 @@
 <body>
     <div id="mapContainer"></div>
     <script src="mappoc.js" type="text/javascript"></script>
+    <script src="maputility.js" type="text/javascript"></script>
+    <script src="mapbasics.js" type="text/javascript"></script>
+    <script src="markers.js" type="text/javascript"></script>
 </body>
 </html>
