--- a/public/map.html
+++ b/public/map.html
@@ -35,5 +35,6 @@
     <script src="maputility.js" type="text/javascript"></script>
     <script src="mapbasics.js" type="text/javascript"></script>
     <script src="markers.js" type="text/javascript"></script>
+    <script src="area.js" type="text/javascript"></script>
 </body>
 </html>
