--- a/public/map.html
+++ b/public/map.html
@@ -36,5 +36,6 @@
     <script src="mapbasics.js" type="text/javascript"></script>
     <script src="markers.js" type="text/javascript"></script>
     <script src="area.js" type="text/javascript"></script>
+    <script src="location.js" type="text/javascript"></script>
 </body>
 </html>
